examples/test/testpolicy18087.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18087
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key34: value44
      key21: value30
      key6: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value43
          key37: value1
      podSelector:
        matchLabels:
          key11: value26
